--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,76 @@
-addict
-future
-lmdb
-numpy
-opencv-python
-ptflops
-Pillow
-pyyaml
-requests
-scikit-image
-scipy
-thop
-tb-nightly
-torch>=1.7
-torchvision
-torchstat
+absl-py==0.11.0
+backcall==0.2.0
+cachetools==4.2.0
+certifi==2020.12.5
+chardet==4.0.0
+cycler==0.10.0
+decorator==4.4.2
+future==0.18.2
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
+graphviz==0.15
+grpcio==1.34.0
+gviz-api==1.9.0
+idna==2.10
+imageio==2.9.0
+importlib-metadata==3.3.0
+# ipykernel @ file:///tmp/build/80754af9/ipykernel_1596206598566/work/dist/ipykernel-5.3.4-py3-none-any.whl
+# ipython @ file:///tmp/build/80754af9/ipython_1604101195213/work
+# ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+jedi==0.17.2
+# jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
+# jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1606148959479/work
+kiwisolver==1.3.1
+line-profiler==3.1.0
+Markdown==3.3.3
+matplotlib==3.3.3
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+networkx==2.5
+# numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1603479632437/work
+# nvidia-dali==0.10.0
+oauthlib==3.1.0
+opencv-python==4.4.0.46
+pandas==1.1.5
+parso==0.7.1
+# pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+# pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==8.0.1
+# prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
+protobuf==3.14.0
+ptflops==0.6.4
+# ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1605560620615/work/dist/ptyprocess-0.6.0-py2.py3-none-any.whl
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+# Pygments @ file:///tmp/build/80754af9/pygments_1607368905949/work
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.5
+PyWavelets==1.1.1
+pyzmq==20.0.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.6
+scikit-image==0.16.2
+scipy==1.5.4
+# six @ file:///tmp/build/80754af9/six_1605205313296/work
+# tensorboard==2.4.0
+# tensorboard-plugin-profile==2.4.0
+# tensorboard-plugin-wit==1.7.0
+tensorboardX==2.1
+thop @ git+https://github.com/Lyken17/pytorch-OpCounter.git@d1920d3400a62678ab3c2cf21ba13db35921713c
+tifffile==2021.1.14
+torch==1.7.1
+torchstat==0.0.7
+torchvision==0.8.2
+torchviz==0.0.1
 tqdm
-yapf
-setuptools==59.5.0
-
+# tornado @ file:///tmp/build/80754af9/tornado_1606942283357/work
+# traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
+# trilinear==0.0.0
+typing-extensions==3.7.4.3
+urllib3==1.26.2
+# wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+Werkzeug==1.0.1
+zipp==3.4.0
